--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -107,10 +107,12 @@
     <Compile Include="Model\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Validator\ILoginDataValidator.cs" />
-    <Compile Include="Validator\ISignupDataValidator.cs" />
-    <Compile Include="Validator\SignupDataValidator.cs" />
-    <Compile Include="Validator\LoginDataValidator.cs" />
+    <Compile Include="Service\Auth\IPasswordEncoder.cs" />
+    <Compile Include="Service\Auth\PasswordEncoder.cs" />
+    <Compile Include="Service\Validator\ILoginDataValidator.cs" />
+    <Compile Include="Service\Validator\ISignupDataValidator.cs" />
+    <Compile Include="Service\Validator\SignupDataValidator.cs" />
+    <Compile Include="Service\Validator\LoginDataValidator.cs" />
     <Compile Include="View\FacultyListView.cs">
       <SubType>Form</SubType>
     </Compile>
