Branch#26 (Test data) (#26)
* Purge db before seeding

* Load user data

* Load ratings

* Load study subjects

* Add study subject relation to review

* Load study program data

* Load lecturers

* Load universities

* Load faculties

* Load university ids to faculty table

* Add uni descriptions

* Load study subject and program relations

* Add review relations

* Move test data loading method calls to separate method

* Simplify code

--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -95,6 +95,14 @@
     <Compile Include="Migrations\201909281320065_CreateLecturer.Designer.cs">
       <DependentUpon>201909281320065_CreateLecturer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909291323205_AddSubjectId.cs" />
+    <Compile Include="Migrations\201909291323205_AddSubjectId.Designer.cs">
+      <DependentUpon>201909291323205_AddSubjectId.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909300754400_RemoveIdField.cs" />
+    <Compile Include="Migrations\201909300754400_RemoveIdField.Designer.cs">
+      <DependentUpon>201909300754400_RemoveIdField.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\DatabaseContext.cs" />
     <Compile Include="Model\DB.cs" />
@@ -192,6 +200,12 @@
     <EmbeddedResource Include="Migrations\201909281320065_CreateLecturer.resx">
       <DependentUpon>201909281320065_CreateLecturer.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909291323205_AddSubjectId.resx">
+      <DependentUpon>201909291323205_AddSubjectId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909300754400_RemoveIdField.resx">
+      <DependentUpon>201909300754400_RemoveIdField.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -235,6 +249,13 @@
     <EmbeddedResource Include="View\StudySubjectListView.resx">
       <DependentUpon>StudySubjectListView.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Migrations\Data\Faculty.csv" />
+    <None Include="Migrations\Data\Lecturer.csv" />
+    <None Include="Migrations\Data\Review.csv" />
+    <None Include="Migrations\Data\StudyProgram.csv" />
+    <None Include="Migrations\Data\StudySubject.csv" />
+    <None Include="Migrations\Data\University.csv" />
+    <None Include="Migrations\Data\User.csv" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
