--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -103,6 +103,10 @@
     <Compile Include="Migrations\201909300754400_RemoveIdField.Designer.cs">
       <DependentUpon>201909300754400_RemoveIdField.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909301612511_AddDescription.cs" />
+    <Compile Include="Migrations\201909301612511_AddDescription.Designer.cs">
+      <DependentUpon>201909301612511_AddDescription.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\DatabaseContext.cs" />
     <Compile Include="Model\DB.cs" />
@@ -207,6 +211,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201909300754400_RemoveIdField.resx">
       <DependentUpon>201909300754400_RemoveIdField.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909301612511_AddDescription.resx">
+      <DependentUpon>201909301612511_AddDescription.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
