Add lecturer review view, entity fields

--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Controller\Course\ICourseController.cs" />
     <Compile Include="Controller\Lecturer\ILecturerListController.cs" />
     <Compile Include="Controller\Lecturer\LecturerListController.cs" />
+    <Compile Include="Controller\Review\ILecturerReviewController.cs" />
+    <Compile Include="Controller\Review\LecturerReviewController.cs" />
     <Compile Include="Controller\StudyProgram\IStudyProgramController.cs" />
     <Compile Include="Controller\StudyProgram\StudyProgramController.cs" />
     <Compile Include="Controller\Course\CourseController.cs" />
@@ -115,6 +117,10 @@
     <Compile Include="Migrations\201910030723042_RenameToCourse.Designer.cs">
       <DependentUpon>201910030723042_RenameToCourse.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201910031930565_AddLecturerReviewFields.cs" />
+    <Compile Include="Migrations\201910031930565_AddLecturerReviewFields.Designer.cs">
+      <DependentUpon>201910031930565_AddLecturerReviewFields.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\DatabaseContext.cs" />
     <Compile Include="Model\DB.cs" />
@@ -144,6 +150,12 @@
     </Compile>
     <Compile Include="View\List\LecturerListView.Designer.cs">
       <DependentUpon>LecturerListView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Review\LecturerReviewView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Review\LecturerReviewView.Designer.cs">
+      <DependentUpon>LecturerReviewView.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Review\StatisticReviewView.cs">
       <SubType>Form</SubType>
@@ -229,6 +241,9 @@
     <EmbeddedResource Include="Migrations\201910030723042_RenameToCourse.resx">
       <DependentUpon>201910030723042_RenameToCourse.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910031930565_AddLecturerReviewFields.resx">
+      <DependentUpon>201910031930565_AddLecturerReviewFields.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -243,6 +258,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\List\LecturerListView.resx">
       <DependentUpon>LecturerListView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Review\LecturerReviewView.resx">
+      <DependentUpon>LecturerReviewView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Review\StatisticReviewView.resx">
       <DependentUpon>StatisticReviewView.cs</DependentUpon>
