--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -65,13 +65,16 @@
     <Compile Include="Controller\Course\ICourseController.cs" />
     <Compile Include="Controller\Lecturer\ILecturerListController.cs" />
     <Compile Include="Controller\Lecturer\LecturerListController.cs" />
+    <Compile Include="Controller\Review\ICourseReviewController.cs" />
+    <Compile Include="Controller\Review\IStudyProgramReviewController.cs" />
+    <Compile Include="Controller\Review\StudyProgramReviewController.cs" />
     <Compile Include="Controller\StudyProgram\IStudyProgramController.cs" />
     <Compile Include="Controller\StudyProgram\StudyProgramController.cs" />
     <Compile Include="Controller\Course\CourseController.cs" />
     <Compile Include="Controller\Course\ICourseListController.cs" />
     <Compile Include="Controller\Course\CourseListController.cs" />
     <Compile Include="Controller\Review\IReviewController.cs" />
-    <Compile Include="Controller\Review\ReviewController.cs" />
+    <Compile Include="Controller\Review\CourseReviewController.cs" />
     <Compile Include="Controller\University\IUniversityController.cs" />
     <Compile Include="Controller\University\UniversityController.cs" />
     <Compile Include="DependencyInjection\Bindings.cs" />
@@ -115,6 +118,10 @@
     <Compile Include="Migrations\201910030723042_RenameToCourse.Designer.cs">
       <DependentUpon>201910030723042_RenameToCourse.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201910031904073_AddMoreFieldsReview.cs" />
+    <Compile Include="Migrations\201910031904073_AddMoreFieldsReview.Designer.cs">
+      <DependentUpon>201910031904073_AddMoreFieldsReview.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\DatabaseContext.cs" />
     <Compile Include="Model\DB.cs" />
@@ -145,17 +152,17 @@
     <Compile Include="View\List\LecturerListView.Designer.cs">
       <DependentUpon>LecturerListView.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Review\StatisticReviewView.cs">
+    <Compile Include="View\Review\CourseReviewView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\Review\StatisticReviewView.Designer.cs">
-      <DependentUpon>StatisticReviewView.cs</DependentUpon>
+    <Compile Include="View\Review\CourseReviewView.Designer.cs">
+      <DependentUpon>CourseReviewView.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Review\TextReviewView.cs">
+    <Compile Include="View\Review\StudyProgramReviewView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\Review\TextReviewView.Designer.cs">
-      <DependentUpon>TextReviewView.cs</DependentUpon>
+    <Compile Include="View\Review\StudyProgramReviewView.Designer.cs">
+      <DependentUpon>StudyProgramReviewView.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Individual\StudyProgramView.cs">
       <SubType>Form</SubType>
@@ -229,6 +236,9 @@
     <EmbeddedResource Include="Migrations\201910030723042_RenameToCourse.resx">
       <DependentUpon>201910030723042_RenameToCourse.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910031904073_AddMoreFieldsReview.resx">
+      <DependentUpon>201910031904073_AddMoreFieldsReview.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -244,11 +254,11 @@
     <EmbeddedResource Include="View\List\LecturerListView.resx">
       <DependentUpon>LecturerListView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\Review\StatisticReviewView.resx">
-      <DependentUpon>StatisticReviewView.cs</DependentUpon>
+    <EmbeddedResource Include="View\Review\CourseReviewView.resx">
+      <DependentUpon>CourseReviewView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\Review\TextReviewView.resx">
-      <DependentUpon>TextReviewView.cs</DependentUpon>
+    <EmbeddedResource Include="View\Review\StudyProgramReviewView.resx">
+      <DependentUpon>StudyProgramReviewView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Individual\StudyProgramView.resx">
       <DependentUpon>StudyProgramView.cs</DependentUpon>
