--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -39,12 +39,16 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -123,6 +127,10 @@
     <Compile Include="Migrations\201910040905468_LecturerReviewFields.cs" />
     <Compile Include="Migrations\201910040905468_LecturerReviewFields.Designer.cs">
       <DependentUpon>201910040905468_LecturerReviewFields.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201910041613380_UniWebsites.cs" />
+    <Compile Include="Migrations\201910041613380_UniWebsites.Designer.cs">
+      <DependentUpon>201910041613380_UniWebsites.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\DatabaseContext.cs" />
@@ -249,6 +257,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201910040905468_LecturerReviewFields.resx">
       <DependentUpon>201910040905468_LecturerReviewFields.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910041613380_UniWebsites.resx">
+      <DependentUpon>201910041613380_UniWebsites.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
