--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -156,6 +156,12 @@
     <Compile Include="View\AddFormView.Designer.cs">
       <DependentUpon>AddFormView.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\Comparison\FacultyComparisonView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Comparison\FacultyComparisonView.Designer.cs">
+      <DependentUpon>FacultyComparisonView.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Comparison\UniversityComparisonView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -272,6 +278,9 @@
     </Compile>
     <EmbeddedResource Include="View\AddFormView.resx">
       <DependentUpon>AddFormView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Comparison\FacultyComparisonView.resx">
+      <DependentUpon>FacultyComparisonView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Comparison\UniversityComparisonView.resx">
       <DependentUpon>UniversityComparisonView.cs</DependentUpon>
