--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -156,6 +156,12 @@
     <Compile Include="View\AddFormView.Designer.cs">
       <DependentUpon>AddFormView.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\Comparison\CourseComparisonView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Comparison\CourseComparisonView.Designer.cs">
+      <DependentUpon>CourseComparisonView.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Comparison\FacultyComparisonView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -278,6 +284,9 @@
     </Compile>
     <EmbeddedResource Include="View\AddFormView.resx">
       <DependentUpon>AddFormView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Comparison\CourseComparisonView.resx">
+      <DependentUpon>CourseComparisonView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Comparison\FacultyComparisonView.resx">
       <DependentUpon>FacultyComparisonView.cs</DependentUpon>
