--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -162,6 +162,12 @@
     <Compile Include="View\Comparison\FacultyComparisonView.Designer.cs">
       <DependentUpon>FacultyComparisonView.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\Comparison\LecturerComparisonView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Comparison\LecturerComparisonView.Designer.cs">
+      <DependentUpon>LecturerComparisonView.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Comparison\UniversityComparisonView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -281,6 +287,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\Comparison\FacultyComparisonView.resx">
       <DependentUpon>FacultyComparisonView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Comparison\LecturerComparisonView.resx">
+      <DependentUpon>LecturerComparisonView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Comparison\UniversityComparisonView.resx">
       <DependentUpon>UniversityComparisonView.cs</DependentUpon>
